force-app/main/default/objects/CacheSettings__mdt/CacheSettings__mdt.object-meta.xml
<CustomObject>
    <label>Cache Settings</label>
    <pluralLabel>Cache Settings</pluralLabel>
</CustomObject>