force-app/main/default/objects/CacheSettings__mdt/fields/CacheName__c.field-meta.xml
<CustomField>
    <fullName>CacheName__c</fullName>
    <label>CacheName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>