force-app/main/default/objects/CacheSettings__mdt/fields/KeyPrefix__c.field-meta.xml
<CustomField>
    <fullName>KeyPrefix__c</fullName>
    <label>KeyPrefix</label>
    <length>80</length>
    <type>Text</type>
</CustomField>