force-app/main/default/objects/CacheSettings__mdt/fields/ShardLen__c.field-meta.xml
<CustomField>
    <fullName>ShardLen__c</fullName>
    <label>ShardLen</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>