force-app/main/default/objects/CacheSettings__mdt/fields/TtlNegative__c.field-meta.xml
<CustomField>
    <fullName>TtlNegative__c</fullName>
    <label>TtlNegative</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>