force-app/main/default/objects/CacheSettings__mdt/fields/TtlSuccess__c.field-meta.xml
<CustomField>
    <fullName>TtlSuccess__c</fullName>
    <label>TtlSuccess</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>